{"filter":false,"title":"pom.xml","tooltip":"/pom.xml","undoManager":{"mark":20,"position":20,"stack":[[{"start":{"row":157,"column":13},"end":{"row":158,"column":0},"action":"insert","lines":["",""],"id":2},{"start":{"row":158,"column":0},"end":{"row":158,"column":4},"action":"insert","lines":["\t\t\t\t"]}],[{"start":{"row":158,"column":4},"end":{"row":159,"column":0},"action":"insert","lines":["",""],"id":3},{"start":{"row":159,"column":0},"end":{"row":159,"column":4},"action":"insert","lines":["\t\t\t\t"]}],[{"start":{"row":159,"column":0},"end":{"row":166,"column":9},"action":"insert","lines":["<plugin>","    <groupId>org.codehaus.mojo</groupId>","    <artifactId>versions-maven-plugin</artifactId>","    <version>2.5</version>","    <configuration>","        <generateBackupPoms>false</generateBackupPoms>","    </configuration>","</plugin>"],"id":4}],[{"start":{"row":159,"column":0},"end":{"row":159,"column":1},"action":"insert","lines":["\t"],"id":5},{"start":{"row":160,"column":0},"end":{"row":160,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":161,"column":0},"end":{"row":161,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":162,"column":0},"end":{"row":162,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":163,"column":0},"end":{"row":163,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":164,"column":0},"end":{"row":164,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":165,"column":0},"end":{"row":165,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":159,"column":0},"end":{"row":159,"column":1},"action":"insert","lines":["\t"],"id":6},{"start":{"row":160,"column":0},"end":{"row":160,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":161,"column":0},"end":{"row":161,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":162,"column":0},"end":{"row":162,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":163,"column":0},"end":{"row":163,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":164,"column":0},"end":{"row":164,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":165,"column":0},"end":{"row":165,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":159,"column":0},"end":{"row":159,"column":1},"action":"insert","lines":["\t"],"id":7},{"start":{"row":160,"column":0},"end":{"row":160,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":161,"column":0},"end":{"row":161,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":162,"column":0},"end":{"row":162,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":163,"column":0},"end":{"row":163,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":164,"column":0},"end":{"row":164,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":165,"column":0},"end":{"row":165,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":159,"column":0},"end":{"row":159,"column":1},"action":"insert","lines":["\t"],"id":8},{"start":{"row":160,"column":0},"end":{"row":160,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":161,"column":0},"end":{"row":161,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":162,"column":0},"end":{"row":162,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":163,"column":0},"end":{"row":163,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":164,"column":0},"end":{"row":164,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":165,"column":0},"end":{"row":165,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":157,"column":13},"end":{"row":158,"column":4},"action":"remove","lines":["","\t\t\t\t"],"id":9}],[{"start":{"row":153,"column":0},"end":{"row":156,"column":21},"action":"remove","lines":["\t\t\t\t\t<configuration>","\t\t\t\t\t\t<source>1.8</source>","\t\t\t\t\t\t<target>1.8</target>","\t\t\t\t\t</configuration>"],"id":10},{"start":{"row":153,"column":0},"end":{"row":156,"column":20},"action":"insert","lines":["    <version>3.8.0</version>","    <configuration>","        <release>11</release>","    </configuration>"]}],[{"start":{"row":153,"column":0},"end":{"row":153,"column":1},"action":"insert","lines":["\t"],"id":11},{"start":{"row":154,"column":0},"end":{"row":154,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":155,"column":0},"end":{"row":155,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":156,"column":0},"end":{"row":156,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":153,"column":0},"end":{"row":153,"column":1},"action":"insert","lines":["\t"],"id":12},{"start":{"row":154,"column":0},"end":{"row":154,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":155,"column":0},"end":{"row":155,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":156,"column":0},"end":{"row":156,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":153,"column":0},"end":{"row":153,"column":1},"action":"insert","lines":["\t"],"id":13},{"start":{"row":154,"column":0},"end":{"row":154,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":155,"column":0},"end":{"row":155,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":156,"column":0},"end":{"row":156,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":153,"column":0},"end":{"row":153,"column":1},"action":"insert","lines":["\t"],"id":14},{"start":{"row":154,"column":0},"end":{"row":154,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":155,"column":0},"end":{"row":155,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":156,"column":0},"end":{"row":156,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":165,"column":14},"end":{"row":165,"column":17},"action":"remove","lines":["\t\t\t"],"id":15},{"start":{"row":165,"column":14},"end":{"row":166,"column":0},"action":"insert","lines":["",""]},{"start":{"row":166,"column":0},"end":{"row":166,"column":4},"action":"insert","lines":["\t\t\t\t"]}],[{"start":{"row":166,"column":0},"end":{"row":185,"column":9},"action":"insert","lines":["<plugin>","    <groupId>org.apache.maven.plugins</groupId>","    <artifactId>maven-surefire-plugin</artifactId>","    <version>2.22.0</version>","    <configuration>","        <argLine>","            --illegal-access=permit","        </argLine>","    </configuration>","</plugin>","<plugin>","    <groupId>org.apache.maven.plugins</groupId>","    <artifactId>maven-failsafe-plugin</artifactId>","    <version>2.22.0</version>","    <configuration>","        <argLine>","            --illegal-access=permit","        </argLine>","    </configuration>","</plugin>"],"id":16}],[{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"],"id":17},{"start":{"row":167,"column":0},"end":{"row":167,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":168,"column":0},"end":{"row":168,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":169,"column":0},"end":{"row":169,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":170,"column":0},"end":{"row":170,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":171,"column":0},"end":{"row":171,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":172,"column":0},"end":{"row":172,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":173,"column":0},"end":{"row":173,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":174,"column":0},"end":{"row":174,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":175,"column":0},"end":{"row":175,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":176,"column":0},"end":{"row":176,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":177,"column":0},"end":{"row":177,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":178,"column":0},"end":{"row":178,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":179,"column":0},"end":{"row":179,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":180,"column":0},"end":{"row":180,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":181,"column":0},"end":{"row":181,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":182,"column":0},"end":{"row":182,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":183,"column":0},"end":{"row":183,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":184,"column":0},"end":{"row":184,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":185,"column":0},"end":{"row":185,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"],"id":18},{"start":{"row":167,"column":0},"end":{"row":167,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":168,"column":0},"end":{"row":168,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":169,"column":0},"end":{"row":169,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":170,"column":0},"end":{"row":170,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":171,"column":0},"end":{"row":171,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":172,"column":0},"end":{"row":172,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":173,"column":0},"end":{"row":173,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":174,"column":0},"end":{"row":174,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":175,"column":0},"end":{"row":175,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":176,"column":0},"end":{"row":176,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":177,"column":0},"end":{"row":177,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":178,"column":0},"end":{"row":178,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":179,"column":0},"end":{"row":179,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":180,"column":0},"end":{"row":180,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":181,"column":0},"end":{"row":181,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":182,"column":0},"end":{"row":182,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":183,"column":0},"end":{"row":183,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":184,"column":0},"end":{"row":184,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":185,"column":0},"end":{"row":185,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"],"id":19},{"start":{"row":167,"column":0},"end":{"row":167,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":168,"column":0},"end":{"row":168,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":169,"column":0},"end":{"row":169,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":170,"column":0},"end":{"row":170,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":171,"column":0},"end":{"row":171,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":172,"column":0},"end":{"row":172,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":173,"column":0},"end":{"row":173,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":174,"column":0},"end":{"row":174,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":175,"column":0},"end":{"row":175,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":176,"column":0},"end":{"row":176,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":177,"column":0},"end":{"row":177,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":178,"column":0},"end":{"row":178,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":179,"column":0},"end":{"row":179,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":180,"column":0},"end":{"row":180,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":181,"column":0},"end":{"row":181,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":182,"column":0},"end":{"row":182,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":183,"column":0},"end":{"row":183,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":184,"column":0},"end":{"row":184,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":185,"column":0},"end":{"row":185,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":166,"column":0},"end":{"row":166,"column":1},"action":"insert","lines":["\t"],"id":20},{"start":{"row":167,"column":0},"end":{"row":167,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":168,"column":0},"end":{"row":168,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":169,"column":0},"end":{"row":169,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":170,"column":0},"end":{"row":170,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":171,"column":0},"end":{"row":171,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":172,"column":0},"end":{"row":172,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":173,"column":0},"end":{"row":173,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":174,"column":0},"end":{"row":174,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":175,"column":0},"end":{"row":175,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":176,"column":0},"end":{"row":176,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":177,"column":0},"end":{"row":177,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":178,"column":0},"end":{"row":178,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":179,"column":0},"end":{"row":179,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":180,"column":0},"end":{"row":180,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":181,"column":0},"end":{"row":181,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":182,"column":0},"end":{"row":182,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":183,"column":0},"end":{"row":183,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":184,"column":0},"end":{"row":184,"column":1},"action":"insert","lines":["\t"]},{"start":{"row":185,"column":0},"end":{"row":185,"column":1},"action":"insert","lines":["\t"]}],[{"start":{"row":166,"column":0},"end":{"row":166,"column":4},"action":"remove","lines":["\t\t\t\t"],"id":21}],[{"start":{"row":166,"column":0},"end":{"row":186,"column":0},"action":"remove","lines":["<plugin>","\t\t\t\t    <groupId>org.apache.maven.plugins</groupId>","\t\t\t\t    <artifactId>maven-surefire-plugin</artifactId>","\t\t\t\t    <version>2.22.0</version>","\t\t\t\t    <configuration>","\t\t\t\t        <argLine>","\t\t\t\t            --illegal-access=permit","\t\t\t\t        </argLine>","\t\t\t\t    </configuration>","\t\t\t\t</plugin>","\t\t\t\t<plugin>","\t\t\t\t    <groupId>org.apache.maven.plugins</groupId>","\t\t\t\t    <artifactId>maven-failsafe-plugin</artifactId>","\t\t\t\t    <version>2.22.0</version>","\t\t\t\t    <configuration>","\t\t\t\t        <argLine>","\t\t\t\t            --illegal-access=permit","\t\t\t\t        </argLine>","\t\t\t\t    </configuration>","\t\t\t\t</plugin>\t\t\t\t",""],"id":22}]]},"ace":{"folds":[],"scrolltop":2538,"scrollleft":0,"selection":{"start":{"row":166,"column":0},"end":{"row":166,"column":0},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":32,"state":"start","mode":"ace/mode/xml"}},"timestamp":1551801129735,"hash":"3ee5b73d3016b595aa0f9ffcd4d370b2fa2a43b2"}